unpackaged/main/default/objects/Contact_Contact_Relationship__c/Contact_Contact_Relationship__c.object-meta.xml
<CustomObject>
    <label>Contact Contact Relationship</label>
    <nameField>
        <displayFormat>CCR-{0000000}</displayFormat>
        <label>Contact Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Contact Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>