unpackaged/main/default/objects/Contact_Contact_Relationship__c/fields/Percentage_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Ownership__c</fullName>
    <label>Percentage of Ownership</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>