unpackaged/main/default/objects/Contact_Contact_Relationship__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Contact Relationships (Related Contact)</relationshipLabel>
    <relationshipName>Contact_Contact_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>