unpackaged/main/default/objects/Contact_Contact_Relationship__c/fields/Related_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Role_ID__c</fullName>
    <label>Related Role ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>